macviews: don't ignore events that may start a drag

In NativeWidgetMacNSWindow, sendEvent: will *not* call [super sendEvent:] for
events that might be the start of a drag, which prevents the window from
receiving the event if we think it might start a drag. Any LMouseDown could
start a drag, so that causes mouse clicks that aren't on some other NSView to
not raise the window. Fix that by not returning early when maybe starting a
drag.

Bug: 775984
Change-Id: Ibe93e45dc4dde39630a3d97f5a148de018c99ab2
Reviewed-on: https://chromium-review.googlesource.com/980701
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546084}
Former-commit-id: 6dd0abb6ac24b0444a38105cd47c0d82e56d45d4