ui/views/cocoa/native_widget_mac_nswindow.mm
@@ -139,7 +139,6 @@
                         object:self];
 
       [self performWindowDragWithEvent:event];
-      return;
     }
   }
 
